--- a/frontend-angular-2/social-network/src/app/pages/auth-components/login/login.component.html
+++ b/frontend-angular-2/social-network/src/app/pages/auth-components/login/login.component.html
@@ -12,7 +12,7 @@
             <div class="social-line text-center">
               <a
                 class="btn btn-neutral btn-facebook btn-just-icon"
-                (click)="onFacebookLogin()"
+                (click)="signInWithFB()"
               >
                 <i class="fa fa-facebook-square"></i>
               </a>
@@ -21,6 +21,7 @@
               <label>Email</label>
               <div
                 class="input-group form-group-no-border"
+
                 [ngClass]="{ 'input-group-focus': focus === true }"
               >
                 <div class="input-group-prepend">
@@ -35,6 +36,8 @@
                   placeholder="Email"
                   (focus)="focus = true"
                   (blur)="focus = false"
+                  [(ngModel)]="userMail"
+                  name="userMail"
                 />
               </div>
 
@@ -54,10 +57,17 @@
                   placeholder="Password"
                   (focus)="focus1 = true"
                   (blur)="focus1 = false"
+                  [(ngModel)]="userPassword"
+                  name="userPassword"
                 />
               </div>
-              <button class="btn btn-danger btn-block btn-round">Login</button>
-              <button class="btn btn-danger btn-neutral btn-block btn-round" [routerLink]= "['/registro']" >Registrar</button>
+              <button class="btn btn-danger btn-block btn-round" (click)="loginUser()">Login</button>
+              <button
+                class="btn btn-danger btn-neutral btn-block btn-round"
+                [routerLink]="['/registro']"
+              >
+                Registrar
+              </button>
             </form>
           </div>
         </div>
