--- a/frontend-angular-2/social-network/src/app/pages/auth-components/register/register.component.html
+++ b/frontend-angular-2/social-network/src/app/pages/auth-components/register/register.component.html
@@ -12,7 +12,7 @@
             <div class="social-line text-center">
               <a
                 class="btn btn-neutral btn-facebook btn-just-icon"
-                (click)="onFacebookLogin()"
+                (click)="signInWithFB()"
               >
                 <i class="fa fa-facebook-square"></i>
               </a>
