--- a/frontend-angular-2/social-network/src/app/pages/auth-components/login/login.component.html
+++ b/frontend-angular-2/social-network/src/app/pages/auth-components/login/login.component.html
@@ -12,7 +12,7 @@
             <div class="social-line text-center">
               <a
                 class="btn btn-neutral btn-facebook btn-just-icon"
-                (click)="signInWithFB()"
+                (click)="onFacebookLogin()"
               >
                 <i class="fa fa-facebook-square"></i>
               </a>
@@ -36,8 +36,8 @@
                   placeholder="Email"
                   (focus)="focus = true"
                   (blur)="focus = false"
-                  [(ngModel)]="userMail"
-                  name="userMail"
+                  [(ngModel)]="username"
+                  name="username"
                 />
               </div>
 
@@ -52,16 +52,16 @@
                   </span>
                 </div>
                 <input
-                  type="text"
+                  type="password"
                   class="form-control"
                   placeholder="Password"
                   (focus)="focus1 = true"
                   (blur)="focus1 = false"
-                  [(ngModel)]="userPassword"
-                  name="userPassword"
+                  [(ngModel)]="password"
+                  name="password"
                 />
               </div>
-              <button class="btn btn-danger btn-block btn-round" (click)="loginUser()">Login</button>
+              <button class="btn btn-danger btn-block btn-round" (click)="loginUser()">Ingresar</button>
               <button
                 class="btn btn-danger btn-neutral btn-block btn-round"
                 [routerLink]="['/registro']"
