--- a/frontend-angular-2/social-network/src/app/pages/auth-components/login/login.component.html
+++ b/frontend-angular-2/social-network/src/app/pages/auth-components/login/login.component.html
@@ -1,3 +1,4 @@
+
 <div class="wrapper">
   <div
     class="page-header"
@@ -62,7 +63,7 @@
                 />
               </div>
               <button class="btn btn-danger btn-block btn-round" (click)="loginUser()">Ingresar</button>
-              <button class="btn btn-danger btn-block btn-round" (click)="decodificar()">validar</button>
+              <button class="btn btn-danger btn-block btn-round"  (click)="logout()">Salir</button>
               <button
                 class="btn btn-danger btn-neutral btn-block btn-round"
                 [routerLink]="['/registro']"
