--- a/frontend-angular-2/social-network/src/app/pages/auth-components/creators/creators.component.html
+++ b/frontend-angular-2/social-network/src/app/pages/auth-components/creators/creators.component.html
@@ -1,1 +1,91 @@
-<p>creators works!</p>
+<div class="wrapper">
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <button type="button" class="btn btn-outline-neutral btn-round " [routerLink]="['/home']" >REGRESAR</button>
+        </li>
+      </ul> 
+
+    <div
+      class="page-header"
+      style="background-image: url('./assets/img/login-image.jpg')">
+
+    <table>
+
+        <tr>
+            <td> 
+                <div class="col-md-12">
+                    <div class="card profile-card">
+                        <div class="background-block">
+                            <img src="../../../../assets/img/fondo.jpg"
+                                alt="profile-sample1" class="background" />
+                        </div>
+                        <div class="profile-thumb-block">
+                            <img src="../../../../assets/img/Carol.jpg" alt="profile-image" class="profile" />
+                        </div>
+                        <div class="card-content">
+                            <h2>Carolina Suy<small>0900-12-10074</small></h2>
+                        </div>
+                    </div>
+                </div></td>
+                <td> 
+                    <div class="col-md-12">
+                        <div class="card profile-card">
+                            <div class="background-block">
+                                <img src="../../../../assets/img/fondo.jpg"
+                                    alt="profile-sample1" class="background" />
+                            </div>
+                            <div class="profile-thumb-block">
+                                <img src="../../../../assets/img/Fer.jpeg" alt="profile-image" class="profile" />
+                            </div>
+                            <div class="card-content">
+                                <h2>Fernando Argueta<small>0900-17-645</small></h2>
+                            </div>
+                        </div>
+                    </div></td>
+                    <td> 
+                        <div class="col-md-12">
+                            <div class="card profile-card">
+                                <div class="background-block">
+                                    <img src="../../../../assets/img/fondo.jpg"
+                                        alt="profile-sample1" class="background" />
+                                </div>
+                                <div class="profile-thumb-block">
+                                    <img src="../../../../assets/img/Dan.jpg" alt="profile-image" class="profile" />
+                                </div>
+                                <div class="card-content">
+                                    <h2>Daniel Monroy<small>0900-18-25993</small></h2>
+                                </div>
+                            </div>
+                        </div></td>
+                        <td> 
+                            <div class="col-md-12">
+                                <div class="card profile-card">
+                                    <div class="background-block">
+                                        <img src="../../../../assets/img/fondo.jpg"
+                                            alt="profile-sample1" class="background" />
+                                    </div>
+                                    <div class="profile-thumb-block">
+                                        <img src="../../../../assets/img/Pedro.jpg" alt="profile-image" class="profile" />
+                                    </div>
+                                    <div class="card-content">
+                                        <h2>Pedro Flores<small>0900-17-14173</small></h2>
+                                    </div>
+                                </div>
+                            </div></td>
+                            <td> 
+                                <div class="col-md-12">
+                                    <div class="card profile-card">
+                                        <div class="background-block">
+                                            <img src="../../../../assets/img/fondo.jpg"
+                                                alt="profile-sample1" class="background" />
+                                        </div>
+                                        <div class="profile-thumb-block">
+                                            <img src="../../../../assets/img/Celso.jpg" alt="profile-image" class="profile" />
+                                        </div>
+                                        <div class="card-content">
+                                            <h2>Celso Rojas<small>0900-17-6674</small></h2>
+                                        </div>
+                                    </div>
+                                </div></td>
+        </tr>
+</table></div>
