--- a/frontend-angular-2/social-network/src/app/pages/auth-components/register/register.component.html
+++ b/frontend-angular-2/social-network/src/app/pages/auth-components/register/register.component.html
@@ -39,34 +39,58 @@
                 />
               </div>
 
-                              <label>Email</label>
-                              <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
-                                <div class="input-group-prepend">
-                                  <span class="input-group-text">
-                                      <i class="nc-icon nc-email-85"></i>
-                                  </span>
-                                </div>
-
-                                  <input type="text" class="form-control" placeholder="Email" (focus)="focus=true" (blur)="focus=false" >
-                              </div>
-
-                              <label>Password</label>
-                              <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus1===true}">
-                                <div class="input-group-prepend">
-                                  <span class="input-group-text">
-                                      <i class="nc-icon nc-key-25"></i>
-                                  </span>
-                                </div>
-                                  <input type="text" class="form-control" placeholder="Password" (focus)="focus1=true" (blur)="focus1=false" >
-                              </div>
-                              <button class="btn btn-danger btn-block btn-round">Register</button>
-                          </form>
-                      </div>
-                    </div>
+              <label>Email</label>
+              <div
+                class="input-group form-group-no-border"
+                [ngClass]="{ 'input-group-focus': focus === true }"
+              >
+                <div class="input-group-prepend">
+                  <span class="input-group-text">
+                    <i class="nc-icon nc-email-85"></i>
+                  </span>
                 </div>
-                <div class="footer register-footer text-center">
-                    <h6>&copy;{{test | date: 'yyyy'}}, by Ingenieria en Sistemas UMG</h6>
+
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Email"
+                  (focus)="focus = true"
+                  (blur)="focus = false"
+                  [(ngModel)]="userMail"
+                  name="userMail"
+                />
+              </div>
+
+              <label>Password</label>
+              <div
+                class="input-group form-group-no-border"
+                [ngClass]="{ 'input-group-focus': focus1 === true }"
+              >
+                <div class="input-group-prepend">
+                  <span class="input-group-text">
+                    <i class="nc-icon nc-key-25"></i>
+                  </span>
                 </div>
-            </div>
+                <input
+                  type="password"
+                  class="form-control"
+                  placeholder="Password"
+                  (focus)="focus1 = true"
+                  (blur)="focus1 = false"
+                  [(ngModel)]="userPassword"
+                  name="userPassword"
+                />
+              </div>
+              <button class="btn btn-danger btn-block btn-round" (click)="createUser()">
+                Register
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="footer register-footer text-center">
+        <h6>&copy;{{ test | date: "yyyy" }}, by Ingenieria en Sistemas UMG</h6>
+      </div>
     </div>
+  </div>
 </div>
