--- a/frontend-angular-2/social-network/src/app/examples/profile/profile.component.html
+++ b/frontend-angular-2/social-network/src/app/examples/profile/profile.component.html
@@ -25,7 +25,7 @@
                       <h4>{{ user.userNickname }}</h4>
                       <p class="text-secondary mb-1">{{ user.userStatus }}</p>
                       <button class="btn btn-primary">UPDATE MY INFO</button>
-                      <button class="btn btn-outline-primary">MESSAGE</button>
+                      <button class="btn btn-outline-primary" (click)="logout()" >LOGOUT ( SALIR )</button>
                     </div>
                   </div>
                 </div>
